// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object-based items match match the snapshot 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="rta "
    style={undefined}
  >
    <textarea
      className="rta__textarea ownClassName"
      onChange={[Function]}
      placeholder="Write a message."
      style={
        Object {
          "background": "red",
        }
      }
      value="Controlled text"
    />
  </div>,
  "nodes": Array [
    <div
      className="rta "
      style={undefined}
    >
      <textarea
        className="rta__textarea ownClassName"
        onChange={[Function]}
        placeholder="Write a message."
        style={
          Object {
            "background": "red",
          }
        }
        value="Controlled text"
      />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReactTextareaAutocomplete
        className="ownClassName"
        loadingComponent={[Function]}
        minChar={1}
        onCaretPositionChange={[Function]}
        onChange={[Function]}
        placeholder="Write a message."
        style={
          Object {
            "background": "red",
          }
        }
        trigger={
          Object {
            ":": Object {
              "component": [Function],
              "dataProvider": [Function],
              "output": [Function],
            },
          }
        }
        value="Controlled text"
      />,
      "_debugID": 18,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReactTextareaAutocomplete {
        "_changeHandler": [Function],
        "_cleanUpProps": [Function],
        "_closeAutocomplete": [Function],
        "_getCurrentTriggerSettings": [Function],
        "_getSuggestions": [Function],
        "_getTextToReplace": [Function],
        "_getValuesFromProvider": [Function],
        "_onSelect": [Function],
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "getCaretPosition": [Function],
        "props": Object {
          "className": "ownClassName",
          "loadingComponent": [Function],
          "minChar": 1,
          "onCaretPositionChange": [Function],
          "onChange": [Function],
          "placeholder": "Write a message.",
          "style": Object {
            "background": "red",
          },
          "trigger": Object {
            ":": Object {
              "component": [Function],
              "dataProvider": [Function],
              "output": [Function],
            },
          },
          "value": "Controlled text",
        },
        "refs": Object {},
        "setCaretPosition": [Function],
        "state": Object {
          "actualToken": "",
          "component": null,
          "currentTrigger": null,
          "data": null,
          "dataLoading": false,
          "left": 0,
          "selectionEnd": 0,
          "selectionStart": 0,
          "top": 0,
          "value": "Controlled text",
        },
        "tokenRegExp": /\\[:\\]\\\\w\\*\\$/,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="rta "
          style={undefined}
        >
          <textarea
            className="rta__textarea ownClassName"
            onChange={[Function]}
            placeholder="Write a message."
            style={
              Object {
                "background": "red",
              }
            }
            value="Controlled text"
          />
        </div>,
        "_debugID": 19,
        "_renderedOutput": <div
          className="rta "
          style={undefined}
        >
          <textarea
            className="rta__textarea ownClassName"
            onChange={[Function]}
            placeholder="Write a message."
            style={
              Object {
                "background": "red",
              }
            }
            value="Controlled text"
          />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReactTextareaAutocomplete
    className="ownClassName"
    loadingComponent={[Function]}
    minChar={1}
    onCaretPositionChange={[Function]}
    onChange={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    trigger={
      Object {
        ":": Object {
          "component": [Function],
          "dataProvider": [Function],
          "output": [Function],
        },
      }
    }
    value="Controlled text"
  />,
}
`;

exports[`string-based items w/o output fn match match the snapshot 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="rta "
    style={undefined}
  >
    <textarea
      className="rta__textarea ownClassName"
      onChange={[Function]}
      placeholder="Write a message."
      style={
        Object {
          "background": "red",
        }
      }
      value="Controlled text"
    />
  </div>,
  "nodes": Array [
    <div
      className="rta "
      style={undefined}
    >
      <textarea
        className="rta__textarea ownClassName"
        onChange={[Function]}
        placeholder="Write a message."
        style={
          Object {
            "background": "red",
          }
        }
        value="Controlled text"
      />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReactTextareaAutocomplete
        className="ownClassName"
        loadingComponent={[Function]}
        minChar={1}
        onCaretPositionChange={[Function]}
        onChange={[Function]}
        placeholder="Write a message."
        style={
          Object {
            "background": "red",
          }
        }
        trigger={
          Object {
            ":": Object {
              "component": [Function],
              "dataProvider": [Function],
            },
          }
        }
        value="Controlled text"
      />,
      "_debugID": 42,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReactTextareaAutocomplete {
        "_changeHandler": [Function],
        "_cleanUpProps": [Function],
        "_closeAutocomplete": [Function],
        "_getCurrentTriggerSettings": [Function],
        "_getSuggestions": [Function],
        "_getTextToReplace": [Function],
        "_getValuesFromProvider": [Function],
        "_onSelect": [Function],
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "getCaretPosition": [Function],
        "props": Object {
          "className": "ownClassName",
          "loadingComponent": [Function],
          "minChar": 1,
          "onCaretPositionChange": [Function],
          "onChange": [Function],
          "placeholder": "Write a message.",
          "style": Object {
            "background": "red",
          },
          "trigger": Object {
            ":": Object {
              "component": [Function],
              "dataProvider": [Function],
            },
          },
          "value": "Controlled text",
        },
        "refs": Object {},
        "setCaretPosition": [Function],
        "state": Object {
          "actualToken": "",
          "component": null,
          "currentTrigger": null,
          "data": null,
          "dataLoading": false,
          "left": 0,
          "selectionEnd": 0,
          "selectionStart": 0,
          "top": 0,
          "value": "Controlled text",
        },
        "tokenRegExp": /\\[:\\]\\\\w\\*\\$/,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="rta "
          style={undefined}
        >
          <textarea
            className="rta__textarea ownClassName"
            onChange={[Function]}
            placeholder="Write a message."
            style={
              Object {
                "background": "red",
              }
            }
            value="Controlled text"
          />
        </div>,
        "_debugID": 43,
        "_renderedOutput": <div
          className="rta "
          style={undefined}
        >
          <textarea
            className="rta__textarea ownClassName"
            onChange={[Function]}
            placeholder="Write a message."
            style={
              Object {
                "background": "red",
              }
            }
            value="Controlled text"
          />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReactTextareaAutocomplete
    className="ownClassName"
    loadingComponent={[Function]}
    minChar={1}
    onCaretPositionChange={[Function]}
    onChange={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    trigger={
      Object {
        ":": Object {
          "component": [Function],
          "dataProvider": [Function],
        },
      }
    }
    value="Controlled text"
  />,
}
`;

exports[`string-based items with output fn match match the snapshot 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="rta "
    style={undefined}
  >
    <textarea
      className="rta__textarea ownClassName"
      onChange={[Function]}
      placeholder="Write a message."
      style={
        Object {
          "background": "red",
        }
      }
      value="Controlled text"
    />
  </div>,
  "nodes": Array [
    <div
      className="rta "
      style={undefined}
    >
      <textarea
        className="rta__textarea ownClassName"
        onChange={[Function]}
        placeholder="Write a message."
        style={
          Object {
            "background": "red",
          }
        }
        value="Controlled text"
      />
    </div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <ReactTextareaAutocomplete
        className="ownClassName"
        loadingComponent={[Function]}
        minChar={1}
        onCaretPositionChange={[Function]}
        onChange={[Function]}
        placeholder="Write a message."
        style={
          Object {
            "background": "red",
          }
        }
        trigger={
          Object {
            ":": Object {
              "component": [Function],
              "dataProvider": [Function],
              "output": [Function],
            },
          }
        }
        value="Controlled text"
      />,
      "_debugID": 64,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": ReactTextareaAutocomplete {
        "_changeHandler": [Function],
        "_cleanUpProps": [Function],
        "_closeAutocomplete": [Function],
        "_getCurrentTriggerSettings": [Function],
        "_getSuggestions": [Function],
        "_getTextToReplace": [Function],
        "_getValuesFromProvider": [Function],
        "_onSelect": [Function],
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "getCaretPosition": [Function],
        "props": Object {
          "className": "ownClassName",
          "loadingComponent": [Function],
          "minChar": 1,
          "onCaretPositionChange": [Function],
          "onChange": [Function],
          "placeholder": "Write a message.",
          "style": Object {
            "background": "red",
          },
          "trigger": Object {
            ":": Object {
              "component": [Function],
              "dataProvider": [Function],
              "output": [Function],
            },
          },
          "value": "Controlled text",
        },
        "refs": Object {},
        "setCaretPosition": [Function],
        "state": Object {
          "actualToken": "",
          "component": null,
          "currentTrigger": null,
          "data": null,
          "dataLoading": false,
          "left": 0,
          "selectionEnd": 0,
          "selectionStart": 0,
          "top": 0,
          "value": "Controlled text",
        },
        "tokenRegExp": /\\[:\\]\\\\w\\*\\$/,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="rta "
          style={undefined}
        >
          <textarea
            className="rta__textarea ownClassName"
            onChange={[Function]}
            placeholder="Write a message."
            style={
              Object {
                "background": "red",
              }
            }
            value="Controlled text"
          />
        </div>,
        "_debugID": 65,
        "_renderedOutput": <div
          className="rta "
          style={undefined}
        >
          <textarea
            className="rta__textarea ownClassName"
            onChange={[Function]}
            placeholder="Write a message."
            style={
              Object {
                "background": "red",
              }
            }
            value="Controlled text"
          />
        </div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ReactTextareaAutocomplete
    className="ownClassName"
    loadingComponent={[Function]}
    minChar={1}
    onCaretPositionChange={[Function]}
    onChange={[Function]}
    placeholder="Write a message."
    style={
      Object {
        "background": "red",
      }
    }
    trigger={
      Object {
        ":": Object {
          "component": [Function],
          "dataProvider": [Function],
          "output": [Function],
        },
      }
    }
    value="Controlled text"
  />,
}
`;
